<resources>
    <string name="app_name">GitHubClient</string>
    <!-- Strings related to login -->
    <string name="et_token">Personal access token</string>
    <string name="empty_input">Empty input</string>
    <string name="invalid_input">Invalid input</string>
    <string name="btn_sign_in">Sign in</string>
    <string name="btn_error_ok">OK</string>
    <string name="sign_out">Sign out</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_refresh">Refresh</string>

    <string name="repositories_list_header">Repositories</string>
    <string name="auth_header">Auth</string>
    <string name="tv_watchers_title">watchers</string>
    <string name="tv_forks_title">forks</string>
    <string name="tv_stars_title">stars</string>
    <string name="tv_license_label">License</string>

    <string name="logo_description">GitHub logo</string>
    <string name="link_icon">link icon</string>
    <string name="license_icon">license icon</string>
    <string name="star_icon">star icon</string>
    <string name="fork_icon">fork icon</string>
    <string name="eye_icon">eye icon</string>

    <string name="empty_error_label">Empty</string>
    <string name="empty_license">-</string>
    <string name="network_error_label">Network Error</string>
    <string name="something_error_label">Something error</string>
    <string name="something_error">Check your something</string>
    <string name="no_saved_token">No saved token</string>
    <string name="empty_repositories_list">Nothing to show, no repositories available</string>
    <string name="empty_readme">No README.md</string>
    <string name="bad_url_repo">Link is unavailable</string>
    <string name="browser_unavailable">Browser is unavailable</string>
    <string name="empty_server_data">No data</string>
    <string name="wrong_token">Wrong token</string>
    <string name="service_unavailable">Service unavailable</string>
    <string name="no_rights">No rights to view</string>
    <string name="network_error">Check your Internet connection</string>
    <string name="unknown_error">Unknown service error</string>
    <string name="info_for_developers">%1$s / %2$d\ninformation for developers</string>
    <string name="error_label">Error</string>
</resources>