<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.detailInfo.DetailInfoFragment">

    <include
        android:id="@+id/topAppBarLayout"
        layout="@layout/widget_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topAppBarLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            tools:context=".presentation.detailInfo.DetailInfoFragment">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/right_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="10dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/left_guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="10dp" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/all_sections"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="iv_link,tv_link,iv_license,license_label,tv_license,forks_layout,stars_layout,watchers_layout,tv_readme"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="20dp" />

            <ImageView
                android:id="@+id/iv_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:contentDescription="@string/link_icon"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_link" />

            <TextView
                android:id="@+id/tv_link"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.App.Text.Label.Bold"
                android:textColor="?attr/colorPrimary"
                app:layout_constraintBottom_toBottomOf="@+id/iv_link"
                app:layout_constraintEnd_toStartOf="@+id/right_guideline"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/iv_link"
                app:layout_constraintTop_toTopOf="@+id/iv_link"
                tools:text="https://github.com/icerockdev/moko-resources" />

            <ImageView
                android:id="@+id/iv_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/sections_vertical_margin"
                android:contentDescription="@string/license_icon"
                app:layout_constraintStart_toStartOf="@+id/left_guideline"
                app:layout_constraintTop_toBottomOf="@+id/iv_link"
                app:srcCompat="@drawable/ic_license" />

            <TextView
                android:id="@+id/license_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/tv_license_label"
                android:textAppearance="@style/TextAppearance.App.Text.Label.Bold"
                app:layout_constraintBottom_toBottomOf="@+id/iv_license"
                app:layout_constraintStart_toEndOf="@+id/iv_license"
                app:layout_constraintTop_toTopOf="@+id/iv_license" />

            <TextView
                android:id="@+id/tv_license"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="26dp"
                android:textAppearance="@style/TextAppearance.App.Text.Label.Bold"
                app:layout_constraintBottom_toBottomOf="@+id/license_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/license_label"
                app:layout_constraintVertical_bias="1.0"
                tools:text="Apache-2.0" />

            <LinearLayout
                android:id="@+id/stars_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="29dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_license">

                <ImageView
                    android:id="@+id/iv_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/star_icon"
                    app:srcCompat="@drawable/ic_star" />

                <TextView
                    android:id="@+id/tv_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:textAppearance="@style/TextAppearance.App.Text.Label.Bold"
                    android:textColor="@color/gold"
                    tools:text="999" />

                <TextView
                    android:id="@+id/tv_stars_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_between_one_statistic"
                    android:text="@string/tv_stars_title"
                    android:textAppearance="@style/TextAppearance.App.Text.Label" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/forks_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/watchers_layout"
                app:layout_constraintStart_toEndOf="@id/stars_layout"
                app:layout_constraintTop_toBottomOf="@id/iv_license">

                <ImageView
                    android:id="@+id/iv_forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/fork_icon"
                    app:srcCompat="@drawable/ic_fork" />

                <TextView
                    android:id="@+id/tv_forks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.App.Text.Label.Bold"
                    android:textColor="@color/green"
                    tools:text="999" />

                <TextView
                    android:id="@+id/tv_forks_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_forks_title"
                    android:textAppearance="@style/TextAppearance.App.Text.Label" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/watchers_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:layout_marginEnd="11dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_license">

                <ImageView
                    android:id="@+id/iv_watchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/eye_icon"
                    app:srcCompat="@drawable/ic_watcher" />

                <TextView
                    android:id="@+id/tv_watchers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:textAppearance="@style/TextAppearance.App.Text.Label.Bold"
                    android:textColor="@color/cyan"
                    tools:text="999" />

                <TextView
                    android:id="@+id/tv_watchers_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_watchers_title"
                    android:textAppearance="@style/TextAppearance.App.Text.Label" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_readme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/stars_layout" />

            <include
                android:id="@+id/error_readme_layout"
                layout="@layout/layout_error"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/forks_layout" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/progress_circular_readme"
                style="@style/Widget.ProgressIndicator.Small"
                app:layout_constraintBottom_toBottomOf="@+id/tv_readme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_readme" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        android:id="@+id/error_layout"
        layout="@layout/layout_error"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <include
        android:id="@+id/loading_layout"
        layout="@layout/layout_loading"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

